language/move-lang/tests/move_check/expansion/use_inner_scope_unused.exp
error: 

    ┌── tests/move_check/expansion/use_inner_scope_unused.move:13:23 ───
    │
 13 │         use 0x1::M as X;
    │                       ^ Unused 'use' of alias 'X'. Consider removing it
    │

error: 

    ┌── tests/move_check/expansion/use_inner_scope_unused.move:14:31 ───
    │
 14 │         use 0x1::M::{check as f, S1 as S8};
    │                               ^ Unused 'use' of alias 'f'. Consider removing it
    │

error: 

    ┌── tests/move_check/expansion/use_inner_scope_unused.move:14:40 ───
    │
 14 │         use 0x1::M::{check as f, S1 as S8};
    │                                        ^^ Unused 'use' of alias 'S8'. Consider removing it
    │

